<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="transition_login"
    tools:context=".Login.loginuser">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blurView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </eightbitlab.com.blurview.BlurView>


    <RelativeLayout
        android:id="@+id/tanVe"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/accLog">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="72dp"
            android:layout_height="66dp"
            android:layout_marginTop="16dp"

            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_smallback" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/loginto"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginStart="38dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/createyour"
            android:textColor="@color/white"
            android:textSize="45sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tanVe"
        android:padding="25dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailfiled"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tanVe"
            android:layout_marginStart="12dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tanVe"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwrdfiled"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailfiled"
            android:layout_marginStart="12dp"
            android:hint="@string/pw"
            android:inputType="textPassword"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/emailfiled"
            app:startIconDrawable="@drawable/ic_baseline_enhanced_encryption_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/black"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwrdfiled"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:padding="6dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/remember"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwrdfiled"
                android:text="@string/forgot"
                android:layout_marginStart="99dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_marginTop="28dp"
            android:text="@string/createyourbtn"
            app:backgroundTint="@color/accLog"
            android:layout_marginStart="12dp"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignIn"
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_below="@id/loginBtn"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp" />


    </LinearLayout>


</RelativeLayout>